fix: Cors temporär deaktiviert
Cors komplett deaktiviert bis wir eine Lösung gefunden haben.
Refs: SCP-2, SCP-112
Time: 0.1 h